--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,16 @@ body{
     padding: 0 1em;
 }
 
+.btnRndm, input{
+    height: 35px;
+    padding: 0 1em;
+}
+
+.btnStp, input{
+    height: 35px;
+    padding: 0 1em;
+}
+
 
 .number{
     padding-right: 1em;
